Added volume bar javascript, js for play pause added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="1"></i>
                 <!-- </div> -->
                 <img src="/covers/1.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -74,7 +74,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="2"></i>
                 <!-- </div> -->
                 <img src="/covers/2.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -86,7 +86,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="3"></i>
                 <!-- </div> -->
                 <img src="/covers/3.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -98,7 +98,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="4"></i>
                 <!-- </div> -->
                 <img src="/covers/4.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -110,7 +110,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="5"></i>
                 <!-- </div> -->
                 <img src="/covers/5.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -122,7 +122,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="6"></i>
                 <!-- </div> -->
                 <img src="/covers/6.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -134,7 +134,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="7"></i>
                 <!-- </div> -->
                 <img src="/covers/7.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -146,7 +146,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="8"></i>
                 <!-- </div> -->
                 <img src="/covers/8.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -158,7 +158,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="9"></i>
                 <!-- </div> -->
                 <img src="/covers/9.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -170,7 +170,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="10"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -182,7 +182,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="11"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -194,7 +194,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="12"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -206,7 +206,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="13"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -218,7 +218,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="14"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -230,7 +230,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="15"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -242,7 +242,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="16"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -254,7 +254,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="17"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -266,7 +266,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="18"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -278,7 +278,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="19"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -290,7 +290,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="20"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -302,7 +302,7 @@
             <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
               <div class="h-100">
                 <!-- <div class="play-icon"> -->
-                  <i class="fas fa-2x fa-play-circle masterPlayCover"></i>
+                  <i class="fas fa-2x fa-play-circle masterPlayCover playVisible" id="21"></i>
                 <!-- </div> -->
                 <img src="/covers/10.jpg" class="card-img-top" alt="..." />
                 <div class="song-info">
@@ -343,14 +343,15 @@
         <i class="fas fa-2x fa-step-forward smallicon" id="next"></i>
         <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i>
         <div class="volumebar">
-          <i class="fa-solid fa-volume-low volume-icon"></i>
+          <i class="fa-solid fa-volume-high volume-icon" id="volumeLogo"></i>
           <input
             id="myVolumeBar"
             type="range"
             class="progressBar"
             min="0"
-            value="0"
+            value="50"
             max="100"
+            onchange="setVolume()"
           />
         </div>
       </div>
