--- a/index.html
+++ b/index.html
@@ -343,13 +343,13 @@
         <i class="fas fa-2x fa-step-forward smallicon" id="next"></i>
         <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i>
         <div class="volumebar">
-          <i class="fa-solid fa-volume-high volume-icon" id="volumeLogo"></i>
+          <i class="fa-solid fa-volume-low volume-icon" id="volumeLogo"></i>
           <input
             id="myVolumeBar"
             type="range"
             class="progressBar"
             min="0"
-            value="50"
+            value="10"
             max="100"
             onchange="setVolume()"
           />
