--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <i class="fa-solid fa-house iconspacing"></i>Home
           </div>
           <div class="navbar-button" id="searchbar">
-            <input class="form-control me-2 hidesearchbar" id="search" placeholder="Search Songs" aria-label="Search">
+            <input class="form-control me-2 hidesearchbar" id="search" placeholder="Search Songs" aria-label="Search" onkeyup="searchFunction()">
             <i class="fa-solid fa-magnifying-glass iconspacing" id="searchbaricon"></i>
             <span id="searchbarname" class="">Search</span>
           </div>
@@ -59,10 +59,9 @@
       </div>
       <div class="songs">
         <div class="name">THE MUSIC PLAYER</div>
-        <div class="songs-section">
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+        <div class="songs-section" id="songdiv">
+          <div class="row row-cols-1 row-cols-md-3 g-4" id="rowdiv">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="1"></i>
                 <!-- </div> -->
@@ -71,10 +70,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration"></div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="2"></i>
                 <!-- </div> -->
@@ -83,10 +80,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="3"></i>
                 <!-- </div> -->
@@ -95,10 +90,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="4"></i>
                 <!-- </div> -->
@@ -107,10 +100,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="5"></i>
                 <!-- </div> -->
@@ -119,10 +110,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="6"></i>
                 <!-- </div> -->
@@ -131,10 +120,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="7"></i>
                 <!-- </div> -->
@@ -143,10 +130,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="8"></i>
                 <!-- </div> -->
@@ -155,10 +140,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="9"></i>
                 <!-- </div> -->
@@ -167,10 +150,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="10"></i>
                 <!-- </div> -->
@@ -179,10 +160,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="11"></i>
                 <!-- </div> -->
@@ -191,10 +170,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="12"></i>
                 <!-- </div> -->
@@ -203,10 +180,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="13"></i>
                 <!-- </div> -->
@@ -215,10 +190,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="14"></i>
                 <!-- </div> -->
@@ -227,10 +200,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="15"></i>
                 <!-- </div> -->
@@ -239,10 +210,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="16"></i>
                 <!-- </div> -->
@@ -251,10 +220,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="17"></i>
                 <!-- </div> -->
@@ -263,10 +230,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="18"></i>
                 <!-- </div> -->
@@ -275,10 +240,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="19"></i>
                 <!-- </div> -->
@@ -287,10 +250,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="20"></i>
                 <!-- </div> -->
@@ -299,10 +260,8 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
-            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards">
-              <div class="h-100">
+            <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12  cards h-100">
                 <!-- <div class="play-icon"> -->
                   <i class="fas fa-3x fa-play-circle masterPlayCover playVisible" id="21"></i>
                 <!-- </div> -->
@@ -311,7 +270,6 @@
                   <div class="music-name">Music Name</div>
                   <div class="duration">03:54</div>
                 </div>
-              </div>
             </div>
           </div>
         </div>
