Some css changes searchbar

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="body">
       <div class="first-section">
         <div class="nav-bar" id="navbar">
-          <div class="navbar-button">
-            <i class="fa-solid fa-house iconspacing"></i>Home
+          <div class="navbar-button" id="homebutton">
+            <i class="fa-solid fa-house iconspacing" id="homeicon"></i>Home
           </div>
           <div class="navbar-button" id="searchbar">
             <input class="form-control me-2 hidesearchbar" id="search" placeholder="Search Songs" aria-label="Search" onkeyup="searchFunction()">
