added create, display playlist functionalities

--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
           <div class="subheader">
             <i class="fa-solid fa-book-open iconspacing"></i>Playlists
             <div class="create">
-              <i class="fa-solid fa-plus iconspacing iconright"></i>
+              <i class="fa-solid fa-plus iconspacing iconright" id="createPlaylist"></i>
             </div>
           </div>
-          <div class="subheader liked">Liked Songs</div>
-          <div class="subheader liked"><span class="playlist-name"></span></div>
+          <div class="libraries" id="library-list">
+            <div class="liked">Liked Songs</div>
+          </div>
         </div>
       </div>
       <div class="songs">
