--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       rel="stylesheet"
     />
     <!-- FONT AWESOME -->
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
