corrected js path in html file

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       src="https://kit.fontawesome.com/bfe7c45ec2.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
 
