--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <div class="now-playing">
         <div class="now-playing-info">Now Playing...</div>
         <div class="playing-song-display">
-          <img src="/covers/8.jpg" id="playing-cover-img" class="card-img-top" alt="..." />
+          <img src="covers/8.jpg" id="playing-cover-img" class="card-img-top" alt="..." />
           <div class="songdetails">
             <div class="covermusicname"><span id="coversongname">Music Name</span></div>
             <div class="covericon">
@@ -291,7 +291,7 @@
     </div>
     <div class="footer">
       <div class="footersong">
-        <img src="/covers/8.jpg" id="footercoverimg" alt="..." />
+        <img src="covers/8.jpg" id="footercoverimg" alt="..." />
         <div class="footersongname">
           <span id="masterSongName">Music Name</span>
         </div>
