--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kalam&family=Lobster&family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <!-- FONT AWESOME -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Preahvihear&family=Roboto+Slab&family=Varela&display=swap" rel="stylesheet">        <!-- FONT AWESOME -->
     <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
