added logic to save and load existing and creating playlists

--- a/index.html
+++ b/index.html
@@ -331,6 +331,17 @@
       </div>
     </div>
 
+    <div id="alertClose" class="hideAlerts"></div>
+    <div id="alertBox" class="hideAlerts">
+      <div class="textMsgName">
+        Please enter name for your new playlist!
+      </div>
+      <div class="inputDivClass">
+        <input type="text" id="inputClassName" placeholder="...">
+        <i id="acceptName" class="fa-solid fa-circle-check"></i>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
