removed commented code

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <div class="header"></div>
     <div class="body">
       <div class="first-section">
-        <div class="nav-bar" id="navbar">
-          <div class="navbar-button" id="homebutton">
-            <i class="fa-solid fa-house iconspacing" id="homeicon"></i>
-            <span id="homespan">Home</span>
+        <div id="navbar">
+          <div class="navbar-button" id="homeButton">
+            <i class="fa-solid fa-house iconspacing" id="homeIcon"></i>
+            <span id="homeButtonName">Home</span>
           </div>
           <div class="navbar-button" id="searchbar">
             <input class="form-control me-2 hidesearchbar" id="search" placeholder="Search Songs" aria-label="Search" onkeyup="searchFunction()">
