Added switch library functionality

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
         <i class="fas fa-solid fa-heart footcovericon"></i>
       </div>
       <div class="controls">
-        <i class="fas fa-solid fa-heart smallicon"></i>
+        <i class="fas fa-solid fa-heart smallicon" id="heart"></i>
         <i class="fas fa-2x fa-step-backward smallicon" id="previous"></i>
         <i class="fas fa-2x fa-play-circle" id="masterPlay"></i>
         <i class="fas fa-2x fa-step-forward smallicon" id="next"></i>
