--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kalam&family=Lobster&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Preahvihear&family=Roboto+Slab&family=Varela&display=swap" rel="stylesheet">        <!-- FONT AWESOME -->
     <link rel="stylesheet" href="index.css" />
     <link
@@ -36,6 +37,9 @@
     <div class="header"></div>
     <div class="body">
       <div class="first-section">
+        <div class="heading">
+          Libraries...
+        </div>
         <div id="navbar">
           <div class="navbar-button" id="homeButton">
             <i class="fa-solid fa-house iconspacing" id="homeIcon"></i>
