--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="songdetails">
             <div class="covermusicname"><span id="coversongname">Music Name</span></div>
             <div class="covericon">
-              <i class="fa-solid fa-plus"></i>
+              <i class="fa-solid fa-book-medical"></i>
               <i class="fas fa-solid fa-heart"></i>
             </div>
           </div>
@@ -98,8 +98,10 @@
         <i class="fas fa-2x fa-step-backward smallicon" id="previous"></i>
         <i class="fas fa-2x fa-play-circle" id="masterPlay"></i>
         <i class="fas fa-2x fa-step-forward smallicon" id="next"></i>
-        <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i>
+        <i class="fa-solid fa-book-medical smallicon"></i>
+        <!-- <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i> -->
         <div class="volumebar">
+          <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i>
           <i class="fa-solid fa-volume-low volume-icon" id="volumeLogo"></i>
           <input
             id="myVolumeBar"
