--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <i class="fas fa-2x fa-step-backward smallicon" id="previous"></i>
         <i class="fas fa-2x fa-play-circle" id="masterPlay"></i>
         <i class="fas fa-2x fa-step-forward smallicon" id="next"></i>
-        <i class="fa-solid fa-book-medical smallicon"></i>
+        <i class="fas fa-solid fa-book-medical smallicon"></i>
         <!-- <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i> -->
         <div class="volumebar">
           <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i>
@@ -137,6 +137,10 @@
         <input type="text" id="inputClassName" placeholder="...">
         <i id="acceptName" class="fa-solid fa-circle-check"></i>
       </div>
+    </div>
+
+    <div id="librarylistpopup" class="hideAlerts">
+      
     </div>
 
     <script
