--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <span id="searchbarname" class="">Search</span>
           </div>
         </div>
-        <div class="playlist">
+        <!-- <div class="playlist"> -->
           <div class="subheader">
             <i class="fa-solid fa-book-open iconspacing"></i>Playlists
             <div class="create">
@@ -59,9 +59,9 @@
             </div>
           </div>
           <div class="libraries" id="library-list">
-            <div class="liked">Liked Songs</div>
+            
           </div>
-        </div>
+        <!-- </div> -->
       </div>
       <div class="songs">
         <div class="name">THE MUSIC PLAYER</div>
@@ -101,7 +101,7 @@
         <i class="fas fa-solid fa-book-medical smallicon"></i>
         <!-- <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i> -->
         <div class="volumebar">
-          <i class="fas fa-2xs fa-solid fa-repeat smallicon"></i>
+          <i class="fas fa-2xs fa-solid fa-repeat smallicon" id="repeaticon"></i>
           <i class="fa-solid fa-volume-low volume-icon" id="volumeLogo"></i>
           <input
             id="myVolumeBar"
@@ -140,7 +140,7 @@
     </div>
 
     <div id="librarylistpopup" class="hideAlerts">
-      
+
     </div>
 
     <script
