removed media queries

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
           <div id="navbar">
             <div class="navbar-button" id="searchbar">
-              <input class=" me-2 mobilesearch" id="search" placeholder="Search Songs" aria-label="Search" onkeyup="searchFunction()">
+              <input class="form-control me-2 hidesearchbar" id="search" placeholder="Search Songs" aria-label="Search" onkeyup="searchFunction()">
               <i class="fa-solid fa-magnifying-glass iconspacing" id="searchbaricon"></i>
               <!-- <span id="searchbarname" class="">Search</span> -->
             </div>
