changed mobile view layout

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
       </div>
       <div class="songs">
         <div class="name">THE MUSIC PLAYER</div>
+        <div class="mobile-firstsection">
+          Hello
+        </div>
         <div class="songs-section" id="songdiv">
           <div class="row row-cols-1 row-cols-md-3 g-4" id="rowdiv">
             
