--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       </div>
       <div class="songs">
         <div class="name">THE MUSIC PLAYER</div>
-        <div class="mobile-firstsection">
-          Hello
+        <div id="mobile-firstsection">
+          <input class="form-control me-2 " id="searchmobile" placeholder="Search Songs" aria-label="Search" onkeyup="searchFunctionMobile()">
         </div>
         <div class="songs-section" id="songdiv">
           <div class="row row-cols-1 row-cols-md-3 g-4" id="rowdiv">
@@ -131,6 +131,18 @@
           max="100"
         />
         <div id="timerend">00:00</div>
+      </div>
+    </div>
+    <div class="mobilefooter">
+      <div class="" id="homeButton">
+        <i class="fa-solid fa-house" id="homeIcon"></i>
+        <span id="homeButtonName"></span>
+      </div>
+      <div class="" id="searchbarmobile">
+        <i class="fa-solid fa-magnifying-glass" id="searchbariconmobile"></i>
+      </div>
+      <div>
+        <i class="fa-solid fa-book-open iconspacing"></i>
       </div>
     </div>
 
