--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
       <div class="songs">
         <div class="name">THE MUSIC PLAYER</div>
-        <div id="mobile-firstsection">
+        <div id="mobile-firstsection" class="visuallyhidden">
           <input class="form-control me-2 " id="searchmobile" placeholder="Search Songs" aria-label="Search" onkeyup="searchFunctionMobile()">
         </div>
         <div class="songs-section" id="songdiv">
