added new section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,28 @@
             
           </div>
         </div>
+        <div class="playingsongmobilediv">
+        <div id="playingsongmobile" class="visuallyhidde">
+          <img src="covers/LeftRight.jpg" id="footercoverimg" alt="..." />
+        <div class="footersongname">
+          <span id="masterSongName">Music Name</span>
+        </div>
+        <i class="fas fa-solid fa-heart footcovericon"></i>
+        </div>
+        <!-- <input
+          id="myProgressBarMobile"
+          type="range"
+          class="progressBar"
+          min="0"
+          value="0"
+          max="100"
+        /> -->
+        <div class="progress">
+          <div class="progress-bar" id="myProgressBarMobile" role="progressbar" aria-valuenow="70"
+          aria-valuemin="0" aria-valuemax="100">
+          </div>
+        </div>
+      </div>
       </div>
       <div class="now-playing">
         <div class="now-playing-info">Now Playing...</div>
