--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           value="0"
           max="100"
         /> -->
-        <div class="progresss">
+        <div id="progresss">
           <div class="progress-bar" id="myProgressBarMobile" role="progressbar" aria-valuenow="70"
           aria-valuemin="0" aria-valuemax="100">
           </div>
