--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
         <div class="footersongname">
           <span id="masterSongName">Music Name</span>
         </div>
-        <i class="fas fa-solid fa-heart footcovericon"></i>
+        <i class="fas fa-solid fa-heart"></i>
+        <div class="footcovericon">
+          <i class="fas fa-solid fa-book-medical smallicon"></i>
+        <i class="fa-solid fa-play-circle" id="masterPlay"></i>
+      </div>
         </div>
         <!-- <input
           id="myProgressBarMobile"
