changed some icons

--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
             
           </div>
         </div>
-        <div class="playingsongmobilediv">
-        <div id="playingsongmobile" class="visuallyhidde">
+        <div id="playingsongmobilediv" class="visuallyhidden">
+        <div id="playingsongmobile">
           <img src="covers/LeftRight.jpg" id="footercoverimg" alt="..." />
         <div class="footersongname">
           <span id="masterSongName">Music Name</span>
         </div>
-        <i class="fas fa-solid fa-heart"></i>
+        <i class=" fa-solid fa-heart" id="mobileicon"></i>
         <div class="footcovericon">
-          <i class="fas fa-solid fa-book-medical smallicon"></i>
-        <i class="fa-solid fa-play-circle" id="masterPlay"></i>
+        <i class=" fa-solid fa-book-medical" id="mobileicon"></i>
+        <i class="fa-solid fa-play" id="masterPlayMobile"></i>
       </div>
         </div>
         <!-- <input
