changes in mobile footer

--- a/index.html
+++ b/index.html
@@ -162,13 +162,15 @@
     <div class="mobilefooter">
       <div class="" id="homeButton">
         <i class="fa-solid fa-house" id="homeIcon"></i>
-        <span id="homeButtonName"></span>
+        <span id="homeButtonName">Home</span>
       </div>
       <div class="" id="searchbarmobile">
         <i class="fa-solid fa-magnifying-glass" id="searchbariconmobile"></i>
+        <span id="searchbuttonname">Search</span>
       </div>
-      <div>
+      <div id="libraryname">
         <i class="fa-solid fa-book-open iconspacing"></i>
+        <span id="librarybuttonname">Libraries</span>
       </div>
     </div>
 
