--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         <div id="navbar">
           <div class="navbar-button" id="homeButton">
             <i class="fa-solid fa-house iconspacing" id="homeIcon"></i>
-            <span id="homeButtonName">Home</span>
+            <span class="navBarSpan" id="homeButtonName">Home</span>
           </div>
           <div class="navbar-button" id="searchbar">
             <input class="form-control me-2 hidesearchbar" id="search" placeholder="Search Songs" aria-label="Search" onkeyup="searchFunction()">
             <i class="fa-solid fa-magnifying-glass iconspacing" id="searchbaricon"></i>
-            <span id="searchbarname" class="">Search</span>
+            <span class="navBarSpan" id="searchbarname" class="">Search</span>
           </div>
         </div>
 
