fixed a bug where two element had same id in index html file

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
         <div id="playingsongmobilediv" class="visuallyhidden">
         <div id="playingsongmobile">
-          <img src="covers/LeftRight.jpg" id="footercoverimg" alt="..." />
+          <img src="covers/LeftRight.jpg" id="footercoverimgmbl" alt="..." />
         <div class="footersongname">
           <span id="masterSongName">Music Name</span>
         </div>
