fixed a bug where footer music name was not updating

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="playingsongmobile">
           <img src="covers/LeftRight.jpg" id="footercoverimgmbl" alt="..." />
         <div class="footersongname">
-          <span id="masterSongName">Music Name</span>
+          <span id="masterSongNameMbl">Music Name</span>
         </div>
         <i class=" fa-solid fa-heart" id="mobileicon"></i>
         <div class="footcovericon">
